--- a/services/server/requirements.txt
+++ b/services/server/requirements.txt
@@ -1,119 +1,130 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-appnope==0.1.3
-arrow==1.2.3
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==22.2.0
-backcall==0.2.0
-cachetools==5.3.0
+aiohttp-retry==2.8.3 
+aiohttp==3.8.4 
+aiosignal==1.3.1 
+anyio==3.6.2 
+arrow==1.2.3 
+async-timeout==4.0.2 
+attrs==23.1.0 
+bleach==6.0.0 
+cachetools==5.3.0 
 certifi==2022.12.7
-cffi==1.15.1
+cffi==1.15.1 
 charset-normalizer==3.1.0
-click==8.1.3
-comm==0.1.3
-configparser==5.3.0
-cryptography==40.0.0
-debugpy==1.6.6
-decorator==5.1.1
-docopt==0.6.2
-dparse==0.6.2
-executing==1.2.0
-fastjsonschema==2.16.3
-ffmpeg-python==0.2.0
-filelock==3.10.0
-Flask==2.2.3
-frozenlist==1.3.3
-future==0.18.3
-gitdb==4.0.10
-GitPython==3.1.31
-google-api-core==2.11.0
-google-auth==2.17.0
-google-cloud==0.34.0
-google-cloud-core==2.3.2
-google-cloud-storage==2.7.0
-google-crc32c==1.5.0
-google-resumable-media==2.4.1
-googleapis-common-protos==1.59.0
-gunicorn==20.1.0
-huggingface-hub==0.13.3
-idna==3.4
-ipykernel==6.22.0
-ipython==8.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter_client==8.1.0
-jupyter_core==5.3.0
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-more-itertools==9.1.0
-mpmath==1.3.0
-multidict==6.0.4
-mypy-extensions==1.0.0
-mysql-connector-python==8.0.32
-nbformat==5.8.0
-nest-asyncio==1.5.6
-networkx==3.0
-numpy==1.24.2
-openai==0.27.2
-packaging==23.0
-parso==0.8.3
-pathspec==0.11.1
-pbr==5.11.1
-pexpect==4.8.0
-pickleshare==0.7.5
-pigar==2.0.6
-Pillow==9.4.0
-pipreqs==0.4.11
-platformdirs==3.1.1
-prompt-toolkit==3.0.38
-protobuf==3.20.3
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-Pygments==2.14.0
-PyJWT==2.6.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2022.7.1
-PyYAML==6.0
-pyzmq==25.0.2
-rapidfuzz==2.13.7
-redis==4.5.2
-Redis-Sentinel-Url==1.0.1
-regex==2022.10.31
+click-log==0.4.0 
+click==8.1.3 
+cmake==3.26.3
+colorama==0.4.6 
+cryptography==40.0.2
+debugpy==1.6.7 
+deprecation==2.1.0 
+docutils==0.19 
+dotty-dict==1.3.1 
+ffmpeg-python==0.2.0 
+filelock==3.12.0 
+flask==2.2.3 
+frozenlist==1.3.3 
+future==0.18.3 
+gitdb==4.0.10 
+gitpython==3.1.31 
+google-api-core==2.11.0 
+google-auth==2.17.3 
+google-cloud-core==2.3.2 
+google-cloud-storage==2.8.0 
+google-cloud==0.34.0 
+google-crc32c==1.5.0 
+google-resumable-media==2.4.1 
+googleapis-common-protos==1.59.0 
+gotrue==1.0.1 
+gunicorn==20.1.0 
+h11==0.14.0 
+httpcore==0.16.3 
+httpx==0.23.3 
+huggingface-hub==0.13.4 
+idna==3.4 ; python_version >= "3.11"
+importlib-metadata==6.5.1 
+invoke==1.7.3 
+itsdangerous==2.1.2 
+jaraco-classes==3.2.3 
+jeepney==0.8.0 
+jinja2==3.1.2 
+keyring==23.13.1 
+lit==16.0.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+markupsafe==2.1.2 
+more-itertools==9.1.0 
+mpmath==1.3.0 
+multidict==6.0.4 
+mysql-connector-python==8.0.33 
+networkx==3.1 
+numpy==1.24.2 
+nvidia-cublas-cu11==11.10.3.66 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cuda-cupti-cu11==11.7.101 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cuda-nvrtc-cu11==11.7.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cuda-runtime-cu11==11.7.99 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cudnn-cu11==8.5.0.96 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cufft-cu11==10.9.0.58 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-curand-cu11==10.2.10.91 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cusolver-cu11==11.4.0.1 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-cusparse-cu11==11.7.4.91 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-nccl-cu11==2.14.3 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+nvidia-nvtx-cu11==11.7.91 ; platform_system == "Linux" and platform_machine == "x86_64" and python_version >= "3.11" and python_version < "4.0" 
+openai==0.27.4 
+packaging==23.1 
+pillow==9.5.0 
+pkginfo==1.9.6 
+postgrest==0.10.6 
+protobuf==3.20.3 
+pyasn1-modules==0.3.0 
+pyasn1==0.5.0 
+pycparser==2.21 
+pydantic==1.10.7 
+pygments==2.15.1 
+pyjwt==2.6.0 
+python-dateutil==2.8.2 
+python-dotenv==1.0.0 
+python-gitlab==3.14.0 
+python-semantic-release==7.33.2 
+pytz==2023.3 
+pywin32-ctypes==0.2.0
+pyyaml==6.0 
+rapidfuzz==3.0.0 
+readme-renderer==37.3 
+realtime==1.0.0 
+redis-sentinel-url==1.0.1 
+redis==4.5.4 
+regex==2023.3.23 
 reportlab==3.6.12
-requests==2.28.2
-rich==13.3.2
-rq==1.13.0
-rq-dashboard @ git+https://github.com/jace/rq-dashboard.git@d506c6b43545e502673b32ed70a6d89d180ac324
-rsa==4.9
-ruamel.yaml==0.17.21
-six==1.16.0
-smmap==5.0.0
-stack-data==0.6.2
-stevedore==5.0.0
-sympy==1.11.1
-tokenizers==0.13.2
-toml==0.10.2
-torch==2.0.0
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-transformers==4.27.2
-twilio==7.16.5
-urllib3==1.26.15
-wcwidth==0.2.6
-Werkzeug==2.2.3
-whisper-openai==1.0.0
-yarg==0.1.9
-yarl==1.8.2
+requests-toolbelt==0.10.1 
+requests==2.28.2 
+rfc3986==1.5.0 
+rfc3986[idna2008]==1.5.0 
+rq-dashboard @ git+https://github.com/jace/rq-dashboard.git@d506c6b43545e502673b32ed70a6d89d180ac324 
+rq==1.13.0 
+rsa==4.9 
+secretstorage==3.3.3
+semver==2.13.0 
+setuptools==67.7.1 
+six==1.16.0 
+smmap==5.0.0 
+sniffio==1.3.0 
+storage3==0.5.2 
+strenum==0.4.10 
+supabase==1.0.3 
+supafunc==0.2.2 
+sympy==1.11.1 
+tokenizers==0.13.3 
+tomlkit==0.11.7 
+torch==2.0.0 
+tqdm==4.65.0 
+transformers==4.28.1 
+triton==2.0.0 
+twilio==8.1.0 
+twine==3.8.0 
+typing-extensions==4.5.0 
+urllib3==1.26.15 
+webencodings==0.5.1 
+websockets==10.4 
+werkzeug==2.2.3 
+wheel==0.40.0 
+whisper-openai==1.0.0 
+yarl==1.9.1 
+zipp==3.15.0 
