--- a/services/server/pyproject.toml
+++ b/services/server/pyproject.toml
@@ -29,6 +29,12 @@ rapidfuzz = "^3.0.0"
 reportlab = "^3.6.12"
 
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.2.0"
+types-redis = "^4.5.4.1"
+types-requests = "^2.28.11.17"
+types-google-cloud-ndb = "^2.1.0.6"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
