--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - 6379:6379
 
   dashboard:
-    build: services/worker_dashboard
+    build: src/worker_dashboard
     ports:
       - 5555:5555
     depends_on:
