--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,6 @@
             "module": "flask",
             "env": {
                 "FLASK_APP": "app.py",
-                "FLASK_ENV": "development",
                 "FLASK_DEBUG": "1"  // make sure it is not "0"
             },
             "args": [
@@ -29,8 +28,9 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "justMyCode": true,
-            "cwd": "${fileDirname}"
+            "justMyCode": false,
+            "cwd": "${fileDirname}",
+            "envFile": "${workspaceFolder}/whatsgranny/.env",
         }
     ]
 }
