--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ appnope==0.1.3
 asttokens==2.4.1
 certifi==2023.11.17
 cfgv==3.4.0
+chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.1
@@ -11,6 +12,7 @@ debugpy==1.8.0
 decorator==5.1.1
 deprecation==2.1.0
 distlib==0.3.8
+distro==1.9.0
 executing==2.0.1
 fastapi==0.108.0
 filelock==3.13.1
@@ -33,9 +35,11 @@ mypy-extensions==1.0.0
 nest-asyncio==1.5.8
 nodeenv==1.8.0
 numpy==1.26.3
+openai==1.7.0
 packaging==23.2
 parso==0.8.3
 pexpect==4.9.0
+pillow==10.2.0
 platformdirs==4.1.0
 pluggy==1.3.0
 postgrest==0.13.1
@@ -49,6 +53,8 @@ pydantic_core==2.14.6
 Pygments==2.17.2
 pyTelegramBotAPI==4.14.1
 pytest==7.4.4
+pytest-asyncio==0.23.3
+pytest-mock==3.12.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-telegram-bot==20.7
@@ -56,6 +62,7 @@ PyYAML==6.0.1
 pyzmq==25.1.2
 rapidfuzz==3.6.1
 realtime==1.0.2
+reportlab==4.0.8
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.0
@@ -66,7 +73,9 @@ StrEnum==0.4.15
 supabase==2.3.1
 supafunc==0.3.3
 tornado==6.4
+tqdm==4.66.1
 traitlets==5.14.1
+types-requests==2.31.0.20240106
 typing_extensions==4.9.0
 urllib3==2.1.0
 uvicorn==0.25.0
