--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ services/.mypy_cache
 services/database
 .vscode
 .vscode/**
+database_config
 
 ### Remainder is the default python .gitignore file by github
 
@@ -98,7 +99,7 @@ target/
 .ipynb_checkpoints
 
 # IPython
-profile_default/     
+profile_default/
 ipython_config.py
 
 # pyenv
