--- a/requirements.txt
+++ b/requirements.txt
@@ -64,6 +64,7 @@ rapidfuzz==3.6.1
 realtime==1.0.2
 reportlab==4.0.8
 requests==2.31.0
+sentry-sdk==1.39.2
 six==1.16.0
 sniffio==1.3.0
 stack-data==0.6.3
