change code directory structure to make space for website

--- a/chatbot/Makefile
+++ b/chatbot/Makefile
@@ -9,13 +9,13 @@ devbot:
 bot:
 	gunicorn telegrambot:app -k uvicorn.workers.UvicornWorker -b :8000 --workers 1 --threads 8 --timeout 0
 db_up:
-	cd database_config && supabase start && cd ..
+	cd ../database_config && supabase start && cd ..
 db_down:
-	cd database_config && supabase stop && cd ..
+	cd ../database_config && supabase stop && cd ..
 db_status:
-	cd database_config && supabase status && cd ..
+	cd ../database_config && supabase status && cd ..
 db_sync:
 	echo "This will take 75-120 seconds..."
-	cd database_config && snaplet snapshot create && sleep 60 && snaplet snapshot restore --no-reset --latest -y && cd ..
+	cd ../database_config && snaplet snapshot create && sleep 60 && snaplet snapshot restore --no-reset --latest -y && cd ../chatbot
 db_messages:
 	python scripts/update_system_messages.py
