--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,8 +8,12 @@ repos:
     -   id: check-yaml
     -   id: detect-private-key
     -   id: check-added-large-files
+-   repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
+    -   id: black
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.4.1'
+    rev: 'v1.8.0'
     hooks:
     -   id: mypy
         args: ["--install-types", "--non-interactive", "--ignore-missing-imports"]
