Add git to image to fetch package from other repo

--- a/chatbot/Dockerfile
+++ b/chatbot/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /
 COPY requirements.txt .
 # required for pyproject.toml based projects
 RUN apt-get update && \
-    apt-get install -y gcc libc6-dev
+    apt-get install -y gcc libc6-dev git
 RUN pip install --no-cache-dir --upgrade pip -r requirements.txt
 COPY . ./
 
