--- a/chatbot/Makefile
+++ b/chatbot/Makefile
@@ -20,3 +20,5 @@ db_sync:
 	cd ../database_config && snaplet snapshot create && sleep 60 && snaplet snapshot restore --no-reset --latest -y && cd ../chatbot
 db_messages:
 	python scripts/update_system_messages.py
+freeze:
+	pip freeze | sed "s!git+ssh://!git+https://!" >requirements.txt
