--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -1,36 +1,38 @@
 annotated-types==0.6.0
-anyio==4.2.0
-appnope==0.1.3
+anyio==4.3.0
+appnope==0.1.4
 APScheduler==3.10.4
 asttokens==2.4.1
 asyncio==3.4.3
-certifi==2023.11.17
+certifi==2024.2.2
 chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.1
-debugpy==1.8.0
+debugpy==1.8.1
 decorator==5.1.1
 deprecation==2.1.0
 distro==1.9.0
 executing==2.0.1
-fastapi==0.109.0
+fastapi==0.109.2
 gotrue==2.1.0
 gunicorn==21.2.0
 h11==0.14.0
-httpcore==1.0.2
+httpcore==1.0.4
 httpx==0.25.2
 idna==3.6
 iniconfig==2.0.0
-ipykernel==6.29.0
-ipython==8.21.0
+install==1.3.5
+ipykernel==6.29.2
+ipython==8.22.1
+isort==5.13.2
 jedi==0.19.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 matplotlib-inline==0.1.6
 nest-asyncio==1.6.0
-numpy==1.26.3
-openai==1.10.0
+numpy==1.26.4
+openai==1.12.0
 packaging==23.2
 pandas==2.2.0
 parso==0.8.3
@@ -43,38 +45,39 @@ prompt-toolkit==3.0.43
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
-pydantic==2.6.0
-pydantic_core==2.16.1
+pyarrow==15.0.0
+pydantic==2.6.1
+pydantic_core==2.16.2
 Pygments==2.17.2
-pytest==7.4.4
-pytest-asyncio==0.23.4
+pytest==8.0.1
+pytest-asyncio==0.23.5
 pytest-mock==3.12.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-telegram-bot==20.7
-pytz==2023.4
+pytz==2024.1
 pyzmq==25.1.2
 rapidfuzz==3.6.1
 realtime==1.0.2
-reportlab==4.0.9
+reportlab==4.1.0
 requests==2.31.0
-sentry-sdk==1.40.0
+sentry-sdk==1.40.5
 six==1.16.0
 sniffio==1.3.0
 stack-data==0.6.3
-starlette==0.35.1
+starlette==0.36.3
 storage3==0.7.0
 StrEnum==0.4.15
-supabase==2.3.4
+supabase==2.3.5
 supafunc==0.3.3
+tinytag==1.10.1
 tornado==6.4
-tqdm==4.66.1
+tqdm==4.66.2
 traitlets==5.14.1
 typing_extensions==4.9.0
-tzdata==2023.4
+tzdata==2024.1
 tzlocal==5.2
-urllib3==2.2.0
-uvicorn==0.27.0.post1
+urllib3==2.2.1
+uvicorn==0.27.1
 wcwidth==0.2.13
 websockets==11.0.3
--e git+https://git@github.com/DominiquePaul/python-whatsapp.git@01075b408ca2be9f277739373c4fd141177f6965#egg=whatsapp
