--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -13,6 +13,7 @@ debugpy==1.8.1
 decorator==5.1.1
 deprecation==2.1.0
 distro==1.9.0
+execnet==2.0.2
 executing==2.0.1
 fastapi==0.109.2
 gotrue==2.1.0
@@ -52,6 +53,7 @@ Pygments==2.17.2
 pytest==8.0.1
 pytest-asyncio==0.23.5
 pytest-mock==3.12.0
+pytest-xdist==3.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-telegram-bot==20.7
