--- a/chatbot/requirements.txt
+++ b/chatbot/requirements.txt
@@ -9,12 +9,14 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 comm==0.2.1
+coverage==7.4.3
 debugpy==1.8.1
 decorator==5.1.1
 deprecation==2.1.0
 distro==1.9.0
 execnet==2.0.2
 executing==2.0.1
+Faker==23.3.0
 fastapi==0.109.2
 gotrue==2.1.0
 gunicorn==21.2.0
@@ -31,6 +33,8 @@ jedi==0.19.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
 matplotlib-inline==0.1.6
+mypy==1.8.0
+mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.12.0
@@ -52,6 +56,7 @@ pydantic_core==2.16.2
 Pygments==2.17.2
 pytest==8.0.1
 pytest-asyncio==0.23.5
+pytest-cov==4.1.0
 pytest-mock==3.12.0
 pytest-xdist==3.5.0
 python-dateutil==2.8.2
