fix issue where system messages aren't pulled

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,7 @@ repos:
     hooks:
     -   id: mypy
         args: ["--install-types", "--non-interactive", "--ignore-missing-imports"]
+# -   repo: https://github.com/pre-commit/mirrors-isort
+#     rev: 'v5.10.1'
+#     hooks:
+#     -   id: isort
