Add timestamp to orders table

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           version: latest
 
-      - run: supabase link --project-ref $SUPABASE_PROJECT_ID
+      - run: supabase link --project-ref ${{ secrets.SUPABASE_PROJECT_ID }}
       - run: supabase db push
 
   apply:
